QuorumWebsite/examples/Errors/Error2.quorum
integer value = 10
Output value